# chatwoot-wa-initial-message-report

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.MD  CHANGELOG.md  Makefile  README.md  init_db.py  pyproject.toml  requirements.txt  run.bat  run.py  run_chatwoot_bridge.py  run_chatwoot_rasa_bridge.py  run_chatwoot_sync.py  run_cli.py  run_fastapi.py  run_intent_coverage_report.py  run_ngrok_tunnel.py  run_old.py  run_rasa_server.py  run_rasa_train.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  architecture_decisions.md  credenciales.md  domain.md  dudas.md  informe_api_conversaciones.md  monitoring.md  release.md  todo.done.md  todo.md  ui-as400.md
docs/api/: chatwoot-fastapi-endpoint-gap.md
docs/architecture/: auto_fixes.md  strategic_violations.md
docs/cli/: ux_changelog.md
docs/decisions/: ADR-001-autenticacion-proxy-fastapi.md  ADR-002-bootstrap-degradado-controlado.md  preguntas-arquitectura.md
docs/roadmap/: todo.done.md  todo.md
scripts/: assign_inbox_member.py  bootstrap_security.py  check_health.py  check_token.py  debug_conversation_detail.py  debug_conversations_response.py  generate_changelog.py  inspect_inboxes_payload.py  list_contacts.py  list_conversations.py  list_conversations_all.py  list_inbox_members.py  list_inboxes.py  profile.py
scripts_old/: assign_inbox_member.py  check_health.py  check_token.py  debug_conversation_detail.py  debug_conversations_response.py  list_contacts.py  list_conversations.py  list_conversations_all.py  list_inbox_members.py  list_inboxes.py  profile.py
src/application/: __init__.py
src/chatwoot_wa_initial_message_report/: __init__.py  cli.py  client.py  extractor.py  report.py
src/domain/: __init__.py
src/entities/: chatwoot_connection_result.py  chatwoot_contact.py  chatwoot_contacts_result.py  chatwoot_inbox.py  conversation_memory.py  mysql_config.py
src/infrastructure/: health_check.py
src/shared/: config.py  logger.py
src/use_case/: chatwoot_contacts_query.py  errors.py  fetch_chatwoot_contacts.py  validate_chatwoot_connection.py
src/use_cases/: __init__.py  accounts_sync.py  contacts_list.py  contacts_sync.py  conversations_sync.py  extractor.py  handle_incoming.py  health_check.py  inboxes_sync.py  init_db.py  intent_coverage_report.py  messages_sync.py  run_chatwoot_bridge.py  run_chatwoot_bridge_server.py  run_ngrok_tunnel.py  run_rasa_server.py  train_rasa_model.py
src_old/entities/: categories.py  transform.py
src_old/shared/: logger.py
tests/: test_chatwoot_contacts_query.py  test_chatwoot_http_adapter.py  test_controller.py  test_entities_and_store.py  test_fastapi_integration.py  test_fastapi_proxy_auth.py  test_handle_incoming.py  test_http_transport.py  test_http_transport_async.py  test_rasa_http_gateway.py  test_requests_architecture.py  test_transform.py
(+152 files in other folders)
