[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatwoot-wa-initial-message-report"
version = "0.1.0"
description = "Extract initial incoming text messages from Chatwoot conversations and generate CSV reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "" }]

dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
]

[project.scripts]
chatwoot-wa-initial-message-report = "chatwoot_wa_initial_message_report.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
