[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatwoot-wa-initial-message-report"
version = "0.1.0"
description = "Extract initial incoming text messages from Chatwoot conversations and generate CSV reports."
readme = "README.md"
requires-python = ">=3.10.11"
license = { text = "MIT" }
authors = [{ name = "" }]

dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "pymysql>=1.1",
  "rich>=14.3",
  "textual>=0.28",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "black>=24.0",
  "mypy>=1.8",
  "types-requests>=2.31",
  "types-PyMySQL>=1.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chatwoot-wa-initial-message-report = "interface_adapter.controllers.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = false
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
explicit_package_bases = true
